# gent

./: .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  coverage.yml  release.yml
examples/: array_examples.gnt  chaining.gnt  claude_code_agent.gnt  data_analyst.gnt  enum_examples.gnt  for_loops.gnt  functions.gnt  hello.gnt  multiline_strings.gnt  parallel_agents.gnt  print_examples.gnt  rag_example.gnt  researcher.gnt  string_interpolation.gnt  string_methods.gnt  structured_output.gnt  try_catch.gnt  user_tools.gnt  while_loops.gnt
examples/.gent_index/: vectors.json
homebrew/: gent.rb
scripts/: publish.sh  release.sh
src/: config.rs  errors.rs  lib.rs  main.rs
tests/: agent_execution_tests.rs  agent_loop_tests.rs  agent_value_extended_tests.rs  array_method_tests.rs  ast_tests.rs  ast_tools_tests.rs  auto_rag_tests.rs  block_eval_tests.rs  break_continue_tests.rs  builtin_tests.rs  camel_case_tests.rs  chunker_tests.rs  claude_code_provider.rs  config_tests.rs  embedding_tests.rs  enum_tests.rs  environment_tests.rs  error_reporter_tests.rs  error_tests.rs  error_tests_m2.rs  evaluator_fields_tests.rs  evaluator_tests.rs  expr_eval_tests.rs  for_loop_tests.rs  function_tests.rs  import_tests.rs  integration_tests.rs  interface_tests.rs  interpreter_types_tests.rs  json_parse_tests.rs  knowledge_base_tests.rs  lambda_tests.rs  let_chaining_tests.rs  lexer_tests.rs  lexer_use_tests.rs  llm_async_tests.rs  llm_tests.rs  method_chain_tests.rs  milestone2_integration_tests.rs  milestone3_integration_tests.rs  (+22 more)
(+53 files in other folders)
