[package]
name = "gent"
version = "0.1.0"
edition = "2021"
description = "A programming language for AI agents"
license = "MIT"

[dependencies]
pest = "2.7"
pest_derive = "2.7"
thiserror = "1"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"

[dev-dependencies]
insta = "1.40"
tempfile = "3"
wiremock = "0.6"
tokio-test = "0.4"
