[package]
name = "gent-lang"
version = "0.3.2"
edition = "2021"
description = "A programming language for AI agents"
license = "MIT"
repository = "https://github.com/gent-lang/gent"
homepage = "https://github.com/gent-lang/gent"
readme = "README.md"
keywords = ["ai", "agents", "llm", "programming-language", "dsl"]
categories = ["development-tools", "command-line-utilities"]
authors = ["GENT Contributors"]
rust-version = "1.70"

[lib]
name = "gent"
path = "src/lib.rs"

[[bin]]
name = "gent"
path = "src/main.rs"

[dependencies]
pest = "2.7"
pest_derive = "2.7"
thiserror = "1"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
atty = "0.2"
futures = "0.3"

[dev-dependencies]
insta = "1.40"
tempfile = "3"
wiremock = "0.6"
tokio-test = "0.4"
